# obsidian-superflow

./: .gitignore  AGENTS.md  DEVELOPMENT.md  I18N_GUIDE.md  PRIVACY.md  README.md  build-css.mjs  copy-files.mjs  e2e-launch.sh  e2e-setup.sh  manifest.json  package.json
.beads/: metadata.json
.beads/backup/: backup_state.json  config.jsonl
.planning/: PROJECT-SPEC.md
docs/: HTTP_API.md  calendar-setup.md  core-concepts.md  features.md  index.md  nlp-api.md  settings.md  troubleshooting.md  views.md  webhooks.md  workflows.md
docs/development/: i18n-state-manager.md  translations.md
docs/features/: calendar-integration.md  ics-integration.md  inline-tasks.md  integrations.md  recurring-tasks.md  reminders.md  task-management.md  template-variables.md  time-management.md  user-fields.md
docs/settings/: advanced-settings.md  appearance.md  calendar-settings.md  features.md  general.md  inline-task-settings.md  integrations.md  modal-fields.md  property-identification.md  property-types-reference.md  task-defaults.md  (+1 more)
e2e/: obsidian.ts  superflow.spec.ts
src/: main.ts  types.ts
styles/: README.md  UTILITIES.md  UTILITY-USAGE-GUIDE.md  break-enforcement-modal.css  daily-summary-view.css  focus-mode-selector.css  planning-modal.css  task-card-bem.css  weekly-summary-view.css
superflow-e2e-vault/: Embedded-TaskList-Test.md  Welcome.md
superflow-plasmoid/: install.sh
superflow-tray/: Cargo.toml  IMPLEMENTATION.md  README.md  superflow-tray.service
superflow-tray/src/: api.rs  config.rs  dialogs.rs  idle.rs  main.rs  notifications.rs  state.rs  tray.rs
(+52 files in other folders)
