[package]
name = "superflow-tray"
version = "0.1.0"
edition = "2021"
authors = ["Caio"]
description = "System tray companion for Obsidian SuperFlow"

[dependencies]
# Tray icon (SNI/AppIndicator on Linux)
tray-icon = "0.19"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "process", "fs", "macros"] }

# D-Bus for idle detection
zbus = { version = "4", default-features = false, features = ["tokio"] }

# File watching
notify = { version = "6", default-features = false, features = ["macos_kqueue"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Desktop notifications
notify-rust = "4"

# JSON parsing
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config file
toml = "0.8"
dirs = "5"

# Image loading for tray icons
image = { version = "0.25", default-features = false, features = ["png"] }

# GTK (required by libayatana-appindicator on Linux)
[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
